--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
 <body>
 	<div class="mainContainer">
 		<main id="main" class="wrapper">
-			<div class="headerItems">
-				<div class="headerImages">
-					<img src="assets/paper.svg" alt="piece of paper representing an article">
-				</div>
-				<div class="headerText">
-					<h1>While You Wait</h1>
-					<h3>Bored waiting for the ttc? Read a Medium article or New York Times Magazine article before your bus or streetcar arrives.</h3>
-					<a class="begin">Begin</a>
-				</div>
+			<div class="headerText">
+				<h1>While You Wait</h1>
+				<h3>Bored waiting for the ttc? Read a Medium article or New York Times Magazine article before your bus or streetcar arrives.</h3>
+				<a class="begin">Begin</a>
 			</div>
 
 
@@ -54,6 +49,7 @@
 					<h2 class="title"></h2>
 					<p class="article"></p>
 				</a>
+				<input type="reset" id="resetQuiz" class="resetQuiz" value="Search Again">
 			</div>
 	</main>
 </div>
